--- a/frontend/templates/data_editor.html
+++ b/frontend/templates/data_editor.html
@@ -6,7 +6,7 @@
     <title>Планировщик расписания</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="static/css/styles.css" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -18,7 +18,7 @@
                     <a class="nav-link" href="/index.html">Расписание</a>
                     <a class="nav-link" href="#">Загруженность аудиторий</a>
                     <a class="nav-link" href="/shift_schedules.html">График преподавателей</a>
-                    <a class="nav-link" href="#">Редактирование данных</a>
+                    <a class="nav-link" href="/data_editor.html">Редактирование данных</a>
                 </div>
             </div>
         </div>
@@ -37,7 +37,11 @@
     <div class="card" id="table-container">
     </div>
 </div>
-<script src="js/lesson_planner.js"></script>
+<script src="static/js/lesson_planner.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+{% if DEBUG %}
+    <!-- Hot reload script -->
+    {{ hotreload.script(url_for('hot-reload')) | safe }}
+{% endif %}
 </body>
 </html>
