--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -6,7 +6,7 @@
     <title>Планировщик расписания</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="static/css/styles.css" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -95,7 +95,11 @@
     <div class="card" id="schedule-container">
     </div>
 </div>
-<script src="js/lesson_planner.js"></script>
+<script src="static/js/lesson_planner.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Hot reload script -->
+{% if DEBUG %}
+    {{ hotreload.script(url_for('hot-reload')) | safe }}
+{% endif %}
 </body>
 </html>
