--- a/frontend/templates/shift_schedules.html
+++ b/frontend/templates/shift_schedules.html
@@ -6,8 +6,8 @@
     <title>Планировщик расписания</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
-    <link href="css/shift-schedules.css" rel="stylesheet">
+    <link href="static/css/styles.css" rel="stylesheet">
+    <link href="static/css/shift-schedules.css" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -19,7 +19,7 @@
                     <a class="nav-link" href="/index.html">Расписание</a>
                     <a class="nav-link" href="#">Загруженность аудиторий</a>
                     <a class="nav-link" href="/shift_schedules.html">График преподавателей</a>
-                    <a class="nav-link" href="#">Редактирование данных</a>
+                    <a class="nav-link" href="/data_editor.html">Редактирование данных</a>
                 </div>
             </div>
         </div>
@@ -442,5 +442,9 @@
     </table>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Hot reload script -->
+{% if DEBUG %}
+    {{ hotreload.script(url_for('hot-reload')) | safe }}
+{% endif %}
 </body>
 </html>
