--- a/frontend/templates/data_editor.html
+++ b/frontend/templates/data_editor.html
@@ -29,7 +29,7 @@
         <div class="col">
             <div class="btn-group" role="group" aria-label="Переключение вида">
                 <button type="button" class="btn btn-secondary view-btn" id="group-view-btn">Группы</button>
-                <button type="button" class="btn btn-secondary view-btn" id="proffesor-view-btn">Преподаватели</button>
+                <button type="button" class="btn btn-secondary view-btn" id="prof-view-btn">Преподаватели</button>
                 <button type="button" class="btn btn-secondary view-btn" id="room-view-btn">Аудитории</button>
             </div>
         </div>
@@ -37,7 +37,7 @@
     <div class="card" id="table-container">
     </div>
 </div>
-<script src="static/js/lesson_planner.js"></script>
+<script src="static/js/data_editor.js" type="module"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 {% if DEBUG %}
     <!-- Hot reload script -->
