--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -52,7 +52,7 @@
                             </select>
                         </div>
                         <div class="mb-3">
-                            <select class="form-select" id="timeslotCoursetId" required>
+                            <select class="form-select" id="timeslotCourseId" required>
                                 <option value="" disabled selected>Предмет</option>
                             </select>
                         </div>
@@ -79,7 +79,7 @@
         <div class="col">
             <div class="btn-group" role="group" aria-label="Переключение вида">
                 <button type="button" class="btn btn-secondary view-btn" id="group-view-btn">Группа</button>
-                <button type="button" class="btn btn-secondary view-btn" id="proffesor-view-btn">Преподаватель</button>
+                <button type="button" class="btn btn-secondary view-btn" id="prof-view-btn">Преподаватель</button>
                 <button type="button" class="btn btn-secondary view-btn" id="room-view-btn">Аудитория</button>
             </div>
         </div>
@@ -87,15 +87,15 @@
     <div class="row mb-3">
         <div class="col">
             <div class="btn-group" role="group" aria-label="Переключение вида">
-                <button type="button" class="btn btn-secondary view-btn" id="list-view-btn">Список</button>
                 <button type="button" class="btn btn-secondary view-btn" id="grid-view-btn">Сетка</button>
+                <button type="button" class="btn btn-secondary view-btn" id="list-view-btn">Список</button>
             </div>
         </div>
     </div>
     <div class="card" id="schedule-container">
     </div>
 </div>
-<script src="static/js/lesson_planner.js"></script>
+<script src="static/js/lesson_planner.js" type="module"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Hot reload script -->
 {% if DEBUG %}
