--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
     <link href="static/css/styles.css" rel="stylesheet">
+    <link href="static/css/table-view.css" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -87,7 +88,7 @@
     <div class="row mb-3">
         <div class="col">
             <div class="btn-group" role="group" aria-label="Переключение вида">
-                <button type="button" class="btn btn-secondary view-btn" id="grid-view-btn">Сетка</button>
+                <button type="button" class="btn btn-secondary view-btn" id="table-view-btn">Таблица</button>
                 <button type="button" class="btn btn-secondary view-btn" id="list-view-btn">Список</button>
             </div>
         </div>
