--- a/frontend/static/css/table-view.css
+++ b/frontend/static/css/table-view.css
@@ -1,7 +1,7 @@
 .table-view {
     border-collapse: collapse;
-    table-layout: auto;
-    width: auto;
+    table-layout: fixed;
+    width: 100%;
     margin: 0 auto;
     border:1px твердый #303631;
     border-collapse:коллапс;
@@ -12,6 +12,12 @@
 .table-view th {
     color: #505c6d;
 }
+
+.table-view th, td {
+    overflow: hidden;
+    white-space: nowrap;/
+}
+
 .table-view .first-column {
     white-space: nowrap;
     width: 8ch;
