--- a/frontend/templates/data_editor.html
+++ b/frontend/templates/data_editor.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Планировщик расписания</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="static/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link href="static/bootstrap/bootstrap-icons.css" rel="stylesheet">
     <link href="static/css/styles.css" rel="stylesheet">
 </head>
 <body>
@@ -38,7 +38,7 @@
     </div>
 </div>
 <script src="static/js/data_editor.js" type="module"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="static/bootstrap/bootstrap.bundle.min.js"></script>
 {% if DEBUG %}
     <!-- Hot reload script -->
     {{ hotreload.script(url_for('hot-reload')) | safe }}
