--- a/frontend/templates/data_editor.html
+++ b/frontend/templates/data_editor.html
@@ -1,30 +1,4 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Планировщик расписания</title>
-    <link href="static/bootstrap/bootstrap.min.css" rel="stylesheet">
-    <link href="static/bootstrap/bootstrap-icons.css" rel="stylesheet">
-    <link href="static/css/styles.css" rel="stylesheet">
-</head>
-<body>
-<header>
-    <nav class="navbar navbar-expand navbar-light bg-light">
-        <div class="container-fluid">
-            <div class="d-flex flex-wrap align-items-center">
-                <a class="navbar-brand me-4" href="/index.html">Логотип</a>
-                <div class="navbar-nav flex-wrap">
-                    <a class="nav-link" href="/index.html">Расписание</a>
-                    <a class="nav-link" href="#">Загруженность аудиторий</a>
-                    <a class="nav-link" href="/shift_schedules.html">График преподавателей</a>
-                    <a class="nav-link" href="/data_editor.html">Редактирование данных</a>
-                </div>
-            </div>
-        </div>
-    </nav>
-</header>   
-<div class="container-fluid mt-4">
+<div>
     <div class="row mb-3">
         <div class="col">
             <div class="btn-group" role="group" aria-label="Переключение вида">
@@ -36,12 +10,5 @@
     </div>
     <div class="card" id="table-container">
     </div>
+    <script src="static/js/data_editor.js" type="module"></script>
 </div>
-<script src="static/js/data_editor.js" type="module"></script>
-<script src="static/bootstrap/bootstrap.bundle.min.js"></script>
-{% if DEBUG %}
-    <!-- Hot reload script -->
-    {{ hotreload.script(url_for('hot-reload')) | safe }}
-{% endif %}
-</body>
-</html>
