--- a/frontend/templates/shift_schedules.html
+++ b/frontend/templates/shift_schedules.html
@@ -1,6 +1,6 @@
 <div>
     <link href="static/css/shift-schedules.css" rel="stylesheet">
-    <div class="container-fluid mt-4 table-staff" id="schedule-container">
+    <div class="card container-fluid mt-4 table-staff" id="schedule-container">
         <table class="table table-bordered table-view ">
         </table>
     </div>
