--- a/frontend/static/css/shift-schedules.css
+++ b/frontend/static/css/shift-schedules.css
@@ -3,17 +3,16 @@
     table-layout: auto;
     width: auto;
     margin: 0 auto;
-    border:1px твердый #303631;
-    border-collapse:коллапс;
+    border-collapse:collapse;
     padding:5px;
     padding-left: 20px;
     font-weight: 700;
 }
+
 .table-staff th {
-    border:10px твердый #303631;
     padding:5px;
     background:#0b9c5b;
-    color: #fff;
+    color: var(--bs-body-color);
     font-weight: 700;
     width: 2ch;
     text-align: center;
@@ -26,7 +25,6 @@
 }
 
 .table-staff td {
-    border:1px твердый #303631;
     padding:5px;
     font-weight: 700;
     display: table-cell;
