--- a/frontend/static/css/styles.css
+++ b/frontend/static/css/styles.css
@@ -23,12 +23,8 @@
     }
 }
 
-.timetable-row:nth-child(even) {
-    background-color: var(--bs-gray-100);
-}
-
-.timetable-row:hover {
-    background-color: var(--bs-gray-200);
+.table tr:nth-child(even) {
+    background-color: var(--bs-tertiary-bg);
 }
 
 .table caption {
@@ -43,6 +39,11 @@
 .list-view ul.schedule-list li {
     padding: 10px;
     border-bottom: 1px solid var(--bs-gray-300);
+}
+
+.table th {
+    --bs-table-accent-bg: var(--bs-green);
+    color: var(--bs-gray-200);
 }
 
 .table-view .schedule-grid {
@@ -66,4 +67,8 @@
     background-color: #22b272;
     border-color: #22b272;
     color: var(--bs-white);
+}
+
+.card-header h2 {
+    font-weight: bold;
 }
