--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -14,6 +14,13 @@
           document.documentElement.setAttribute('data-bs-theme', 'dark');
         }
     </script>
+    <style>
+        @font-face { font-family: Montserrat; src: url('/static/fonts/Montserrat-Regular.ttf'); } 
+        @font-face { font-family: Montserrat; font-weight: bold; src: url('/static/fonts/Montserrat-Medium.ttf');}
+        body {
+            font-family: Montserrat !important;
+        }
+    </style>
 </head>
 <body>
 <header>
