добавлены выпадающие меню для редактирования ячеек таблиц

--- a/frontend/static/css/styles.css
+++ b/frontend/static/css/styles.css
@@ -60,7 +60,7 @@
 
 .btn-group .btn {
     background-color: var(--bs-body-bg);
-    color:var(--bs-dark-text);
+    color: var(--bs-dark-text);
 }
 
 .btn-group .btn.active, .btn:hover {
@@ -72,3 +72,8 @@
 .card-header h2 {
     font-weight: bold;
 }
+
+select {
+    background-color:  var(--bs-body-bg);
+    color: var(--bs-text);
+ }
